# yardstick-engine

./: .gitignore  README.md  demo_server.py  openai_proxy.py  pyproject.toml  run.py
benchmarks/addition_qa/: benchmark.yaml  dataset.jsonl
benchmarks/addition_qa_v1/: benchmark.yaml
benchmarks/hard_reasoning/: benchmark.yaml  dataset.jsonl
benchmarks/trivia_qa/: benchmark.yaml  dataset.jsonl
engine/: __init__.py  aggregation.py  cli.py  dataset.py  extraction.py  jsonpath.py  metrics.py  results.py  runner.py  spec.py  systems.py
proxies/: groq_proxy.py  openai_proxy.py  proxy_runner.py  system_prompt.txt
proxies/proxies/: google_proxy.py  groq_proxy.py  openai_proxy.py
tests/: test_aggregation.py  test_cli.py  test_dataset.py  test_determinism.py  test_extraction.py  test_import.py  test_jsonpath.py  test_metrics.py  test_runner.py  test_spec.py  test_systems.py
