[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yardstick-engine"
version = "0.1.0"
description = "Local-first execution core for running custom benchmarks"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["benchmark", "evaluation", "llm", "testing"]
authors = [
    { name = "Yardstick Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.30",
]
proxy = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

